# Vedanta

./: .env-example  .gitignore  Multi_parameter_optimization_analysis_usage.ipynb  README.md  TurtleMACDTimeZoneFilter_optimization_results.html  TurtleMACDTimeZoneFilter_optimization_usage.ipynb  backtest_usage.ipynb  backtest_usage_ADA4H.ipynb  backtest_usage_BBRANK.ipynb  backtest_usage_BBRS.ipynb  backtest_usage_OTTEMA20.ipynb  backtest_usage_TurtleMACDTimeZoneFilter.ipynb  backtest_usage_TwoLayerNN_MACD.ipynb  backtest_usage_fvg_rsi_strategy.ipynb  debug.ipynb  online_usage.ipynb  online_usage2.ipynb  optimal_hummingbot_allocation.py  playground.ipynb  prompt  pyproject.toml  requirements.txt  run.py  run_fvg_rsi_optimization.py  telegram_message_bot.py  telegram_message_bot_turtle.py  telegram_message_bot_vegas.py  test.html  tradview格式.txt  turtle_run.py  turtle_strategy_run.py  usage.ipynb  vegas_run.py
Backtest/: backtest.py
GridTrading/: grid_backtest.py
Multi_parameter_optimization_analysis/: MPOA.py  __init__.py
PINE/: ADA4H.pine  BTC_FVG.pine  OTTEMA20.pine  TurtleMACDTimeZoneFilter.pine  TwoLayerNN_MACD.txt  fvg_rsi_strategy_optimized.pine
Pine/: MACDDonchian.txt  MarketPerception.txt  TurtleMACDTimeZoneFilter.txt  VegasStrategy.txt
Plot/: plot.py
Research/: github開發活動.ipynb  布朗運動.ipynb  時間價值指標.ipynb  最優造市參數計算器.ipynb  最優造市參數計算器_ccxt.ipynb  最優造市參數計算器_多交易所.ipynb  自製avellanedamarketmaking.ipynb  錢包跟單.ipynb
Technicalindicatorstrategy/: ADA4H.py  ADA4HLongShortMIXV1.py  BRRS.py  BTC_FVG.py  MarketPerception.py  OTTEMA20.py  SmoothedMACDStrategy.py  (+28 more)
(+22 files in other folders)
