[project]
name = "vedanta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.5.1",
    "google>=3.0.0",
    "google-cloud-core>=2.4.3",
    "google-generativeai>=0.8.5",
    "grpcio-status>=1.71.2",
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
]